# Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  oocd.cfg  tools.mk
src/: air_data.c  air_data.h  blocking_uart_driver.c  blocking_uart_driver.h  buzzer.c  buzzer.h  comm.c  comm.h  deploy.c  deploy.h  log.c  sensor_readout.c  sensor_readout.h  src.mk  telemetry_protocol.c  telemetry_protocol.h  thread_prio.h
src/tests/: air_data_test.cpp  deploy_test.cpp  telemetry_protocol_test.cpp
targets/container-fw/: Makefile  board.c  board.h  halconf.h  main.c  mcuconf.h
targets/glider-dev-fw/: Makefile  board.c  board.h  halconf.h  main.c  mcuconf.h
targets/glider-fw/: Makefile  board.c  board.h  main.c  mcuconf.h
